src/generators/snapshots/scrut__generators__generator__tests__create__markdown__non-zero_exit_code.snap
---
source: src/generators/generator.rs
expression: result
---
# This is a test

```scrut
$ the command
the output
[123]
```

